logs/mobility/build.make.165.log
[  0%] [  0%] Built target tf2_msgs_generate_messages_lisp
Built target roscpp_generate_messages_lisp
[  0%] [  0%] Built target geometry_msgs_generate_messages_py
Built target roscpp_generate_messages_py
[  0%] [  0%] Built target rosgraph_msgs_generate_messages_lisp
Built target sensor_msgs_generate_messages_cpp
[  0%] Built target geometry_msgs_generate_messages_cpp
[  0%] Built target tf_generate_messages_cpp
[  0%] Built target geometry_msgs_generate_messages_lisp
[  0%] Built target roscpp_generate_messages_cpp
[  0%] Built target actionlib_generate_messages_cpp
[  0%] Built target std_msgs_generate_messages_py
[  0%] Built target actionlib_msgs_generate_messages_cpp
[  0%] [  0%] [  0%] Built target actionlib_generate_messages_py
Built target actionlib_generate_messages_lisp
Built target tf2_msgs_generate_messages_py
[  0%] Built target actionlib_msgs_generate_messages_lisp
[  0%] [  0%] Built target sensor_msgs_generate_messages_py
Built target actionlib_msgs_generate_messages_py
[  0%] Built target rosgraph_msgs_generate_messages_py
[  0%] [  0%] Built target tf_generate_messages_lisp
Built target rosgraph_msgs_generate_messages_cpp
[  0%] Built target std_msgs_generate_messages_cpp
[  0%] [  0%] Built target tf_generate_messages_py
Built target sensor_msgs_generate_messages_lisp
[  0%] [  0%] Built target std_msgs_generate_messages_lisp
Built target tf2_msgs_generate_messages_cpp
[35m[1mScanning dependencies of target mobility
[0m[ 25%] [32mBuilding CXX object CMakeFiles/mobility.dir/src/mobility.cpp.o
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void doFreeMovementStuff()’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:730:1: error: break statement not within loop or switch
 break;
 ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:732:1: error: case label ‘SearchController::REACHED_GOAL_PAUSE’ not within a switch statement
 case (SearchController::REACHED_GOAL_PAUSE):
 ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:745:1: error: break statement not within loop or switch
 break;
 ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:747:1: error: case label ‘SearchController::REACHED_GOAL’ not within a switch statement
 case (SearchController::REACHED_GOAL):
 ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:762:1: error: break statement not within loop or switch
 break;
 ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: At global scope:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:767:1: error: expected declaration before ‘}’ token
 }//end doFreeMovementStuff
 ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
